fix(docs): fix home header width so the menu doesn't jump around when navigating

--- a/runatlantis.io/.vitepress/theme/index.scss
+++ b/runatlantis.io/.vitepress/theme/index.scss
@@ -20,11 +20,8 @@ $MQMobile: 719px;
 $MQMobileNarrow: 419px;
 
 $homeWidth: 960px;
-
-
 .home {
   padding: 0 2rem;
-  max-width: $homeWidth;
   margin: 0px auto 80px;
   .hero {
     text-align: center;
